--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <html>
     <body>
         <h1>This is a header</h1>
+        <p>This is a paragraph</p>
+        <p>This is an additional paragraph</p>
     </body>
 </html>
